<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaveNote">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/placeholder"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/title"
        android:padding="5dp"
        android:orientation="vertical"
        android:id="@+id/linLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et1"
            android:id="@+id/noteTitle"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/noteDesc"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="@string/et2"
            android:inputType="text|textMultiLine"
            android:gravity="top"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCancel"
        android:id="@+id/btnCancel"
        android:layout_below="@+id/linLayout"
        android:layout_margin="20dp"
        android:layout_alignStart="@+id/linLayout"
        android:layout_alignLeft="@+id/linLayout" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:id="@+id/btnSave"
        android:layout_below="@+id/linLayout"
        android:layout_margin="20dp"
        android:layout_alignEnd="@+id/linLayout"
        android:layout_alignRight="@+id/linLayout" />
</RelativeLayout>