<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowNote"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/placeholder"
        android:gravity="center_horizontal"
        android:layout_margin="15dp"
        android:id="@+id/noteTitle"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder2"
        android:textSize="24sp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:id="@+id/noteDescription"
        android:layout_below="@+id/noteTitle"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goBack"
        android:layout_gravity="bottom"
        android:id="@+id/btnBack"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>